k8s/02-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbom-mongo
  namespace: sbom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sbom-mongo
  template:
    metadata:
      labels:
        app: sbom-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: sbom-mongo
  namespace: sbom
spec:
  selector:
    app: sbom-mongo
  ports:
    - port: 27017
      targetPort: 27017
