k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbom-hub-ingress
  namespace: sbom
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  tls:
    - hosts:
        - sbom-hub.com
      secretName: sbom-hub-com-tls
  rules:
    - host: sbom-hub.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sbom-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sbom-frontend
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbom-hub-ingress-www
  namespace: sbom
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  tls:
    - hosts:
        - www.sbom-hub.com
      secretName: www-sbom-hub-com-tls
  rules:
    - host: www.sbom-hub.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sbom-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sbom-frontend
                port:
                  number: 80
